--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div id="landing-page" class="home-section animate-bg" style="height: 100vh; padding-top: 2em;">
-    <div class="landing-shade lighter"></div>
-    <div class="landing-shade darker"></div>
+<div id="landing-page" class="home-section animate-bg" style="height: 100vh; background-color: #25B972;">
+    <div class="landing-shade lightest animate"></div>
+    <div class="landing-shade lighter animate"></div>
+    <div class="landing-shade darker animate"></div>
 
     <div id="main-logo">
         <div class="main-logo-gif transparent pulse animate">Gif</div>
@@ -63,7 +64,7 @@
         </div>
 
         <div class="home-about-section">
-            Ever had the perfect GIF in mind for an occasion, but couldn't remember the URL or where you saw it?
+            Ever had the perfect GIF in mind but couldn't remember the URL or where you last saw it?
             GifCache is an easy way to keep track of those images so you'll never miss another opportunity to deploy
             the ideal reaction GIF or share some adorable puppies.
             <br><br>
@@ -82,24 +83,6 @@
             <a href="https://github.com/kershner/gifcache" class="code-link-wrapper animate">
                 <div class="code-link animate"><i class="fa fa-github"></i>View the code!</div>
             </a>
-        </div>
-    </div>
-</div>
-
-<div class="home-section-grey" style="padding-top: 5em;">
-    <div class="home-whatsnew" style="margin-bottom: 10em;">
-        <div class="home-whatsnew-title">What's New</div>
-
-        <div class="home-whatsnew-version">v1.0</div>
-        <div class="home-whatsnew-date">July 2015</div>
-
-        <div class="home-whatsnew-notes">
-            <div>- Site launched!</div>
-            <div>- Added mp4, gfycat, webm, and gifv support</div>
-            <div>- Added bulk GIF operations</div>
-            <div>- Added GifGrabber - add GIFs directly from reddit</div>
-            <div>- Added party mode for all tag groups</div>
-            <div>- Chrome extension coming soon!</div>
         </div>
     </div>
 </div>
