--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -31,21 +31,21 @@
         <div class="startup-icon"><i class="fa fa-floppy-o"></i></div>
         <div class="startup-bs-title">Store</div>
         <div class="startup-bs-blurb">Save gifs from the internet</div>
-        <div class="startup-bs-img animate"><img src="/static/img/add-gif.png"></div>
+        <div class="startup-bs-img animate"><img src="/static/img/gifcache_gif1.gif"></div>
     </div>
 
     <div class="startup-bs-box">
         <div class="startup-icon"><i class="fa fa-folder-open"></i></div>
         <div class="startup-bs-title">Organize</div>
         <div class="startup-bs-blurb">Tag and sort your collection</div>
-        <div class="startup-bs-img animate"><img src="/static/img/add-tags.png"></div>
+        <div class="startup-bs-img animate"><img src="/static/img/gifcache_gif2.gif"></div>
     </div>
 
     <div class="startup-bs-box">
         <div class="startup-icon"><i class="fa fa-users"></i></div>
         <div class="startup-bs-title">Share</div>
         <div class="startup-bs-blurb">Show off your cache!</div>
-        <div class="startup-bs-img animate"><img src="/static/img/display.png"></div>
+        <div class="startup-bs-img animate"><img src="/static/img/gifcache_gif3.gif"></div>
     </div>
 
     <div class="home-demo">
