--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -31,26 +31,67 @@
         <div class="startup-icon"><i class="fa fa-floppy-o"></i></div>
         <div class="startup-bs-title">Store</div>
         <div class="startup-bs-blurb">Save gifs from the internet</div>
-        <div class="startup-bs-img animate"><img src="/static/img/gifcache_gif1.gif"></div>
+        <div id="gif1" class="startup-bs-img animate"><img src="#"></div>
     </div>
 
     <div class="startup-bs-box">
         <div class="startup-icon"><i class="fa fa-folder-open"></i></div>
         <div class="startup-bs-title">Organize</div>
         <div class="startup-bs-blurb">Tag and sort your collection</div>
-        <div class="startup-bs-img animate"><img src="/static/img/gifcache_gif2.gif"></div>
+        <div id="gif2" class="startup-bs-img animate"><img src="#"></div>
     </div>
 
     <div class="startup-bs-box">
         <div class="startup-icon"><i class="fa fa-users"></i></div>
         <div class="startup-bs-title">Share</div>
         <div class="startup-bs-blurb">Show off your cache!</div>
-        <div class="startup-bs-img animate"><img src="/static/img/gifcache_gif3.gif"></div>
+        <div id="gif3" class="startup-bs-img animate"><img src="#"></div>
     </div>
 
     <div class="home-demo">
         <div class="home-demo-blurb">View my cache!</div>
         <a href="/u/kershner25"><div class="btn green-btn">u/kershner25</div></a>
+    </div>
+</div>
+
+<div class="home-section chrome-extension-section">
+    <div class="landing-shade lightest animate"></div>
+    <div class="landing-shade lighter animate"></div>
+    <div class="landing-shade darker animate"></div>
+
+    <div class="inner">
+        <div class="new-btn pulse">New!</div>
+        <div class="feature-title">Chrome Extension</div>
+        <div class="feature-slogan">Save gifs to your cache from anywhere on the internet</div>
+        <div id="gif4" class="feature-img"><img src="#"></div>
+        <a href="#" class="code-link-wrapper"><div class="code-link extension-btn animate">Add to Chrome!</div></a>
+    </div>
+</div>
+
+<div class="home-section-grey features-section" style="padding: 0;">
+    <div class="feature">
+        <div class="feature-title">Built for <span class="pulse">Speed</span></div>
+        <div id="gif5" class="feature-img"><img src="#"></div>
+        <div class="feature-blurb">
+            Compressed thumbnails are generated for each submitted gif and hosted on Amazon S3.  Full gifs are only
+            downloaded when directly requested.
+        </div>
+    </div>
+
+    <div class="feature" style="background-color: white;">
+        <div class="feature-title">New Gifs <span class="pulse">Daily</span></div>
+        <div id="gif6" class="feature-img"><img src="#"></div>
+        <div class="feature-blurb">
+            Use the included GifGrabber application to add gifs to your Cache directly from reddit.
+        </div>
+    </div>
+
+    <div class="feature">
+        <div class="feature-title">Automatic <span class="pulse">Validation</span></div>
+        <div id="gif7" class="feature-img"><img src="#"></div>
+        <div class="feature-blurb">
+            The validation service allows you to verify that your Cache URLs are valid and unique.
+        </div>
     </div>
 </div>
 
