Added link to Chrome Extension, now live

--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -64,7 +64,7 @@
         <div class="feature-title">Chrome Extension</div>
         <div class="feature-slogan">Save gifs to your cache from anywhere on the internet</div>
         <div id="gif4" class="feature-img"><img class="preload animate" src="#"><img src="/static/img/gifcache_thumbnail4.png"></div>
-        <a href="#" class="code-link-wrapper"><div class="code-link extension-btn animate">Add to Chrome!</div></a>
+        <a href="https://chrome.google.com/webstore/detail/gifcache-chrome-extension/hlhadacmblbgnlbccdlhmjoffbpjhjch" class="code-link-wrapper"><div class="code-link extension-btn animate">Add to Chrome!</div></a>
     </div>
 </div>
 
