Forgot to add animate class to all gifs grid

--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -291,7 +291,7 @@
         </div>
         <!--All GIFs Grid-->
         <div id="all-gif-grid" class="gif-grid">
-            <div class="tag-group animate-bg">
+            <div class="tag-group animate-opacity animate-bg">
                 <div class="tag-title">all GIFs</div>
                 <div class="gif-count animate-fast">{{ gif_number }}</div>
                 <i class="fa fa-cog tag-settings-icon animate-fast"></i>
