Small JS animation tweak to new user welcome message

--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -385,7 +385,7 @@
     </div>
     {% else %}
         {% if can_edit %}
-        <div class="welcome-msg">Welcome to your GifCache!</div>
+        <div class="welcome-msg animate">Welcome to your GifCache!</div>
         {% else %}
         <div class="welcome-msg">{{ name }} hasn't added any GIFs yet</div>
         {% endif %}
