--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -268,6 +268,7 @@ select:hover {cursor: pointer;}
 .welcome-msg {
 	margin: 1em auto;
 	padding: 1em;
+	opacity: 0.0;
 	max-width: 20em;
 	background-color: #72ADD3;
 	font-size: 2em;
