--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -31,21 +31,21 @@
         <div class="startup-icon"><i class="fa fa-floppy-o"></i></div>
         <div class="startup-bs-title">Store</div>
         <div class="startup-bs-blurb">Save gifs from the internet</div>
-        <div id="gif1" class="startup-bs-img animate"><img class="preload animate" src="#"><img src="/static/img/gifcache_thumbnail1.png"></div>
+        <div class="startup-bs-img animate"><video src="/static/img/gifcache_gif1.mp4" autoplay loop poster="../static/img/gifcache_thumbnail1.png"></video></div>
     </div>
 
     <div class="startup-bs-box">
         <div class="startup-icon"><i class="fa fa-folder-open"></i></div>
         <div class="startup-bs-title">Organize</div>
         <div class="startup-bs-blurb">Tag and sort your collection</div>
-        <div id="gif2" class="startup-bs-img animate"><img class="preload animate" src="#"><img src="/static/img/gifcache_thumbnail2.png"></div>
+        <div class="startup-bs-img animate"><video src="/static/img/gifcache_gif2.mp4" autoplay loop poster="../static/img/gifcache_thumbnail2.png"></video></div>
     </div>
 
     <div class="startup-bs-box">
         <div class="startup-icon"><i class="fa fa-users"></i></div>
         <div class="startup-bs-title">Share</div>
         <div class="startup-bs-blurb">Show off your cache!</div>
-        <div id="gif3" class="startup-bs-img animate"><img class="preload animate" src="#"><img src="/static/img/gifcache_thumbnail3.png"></div>
+        <div class="startup-bs-img animate"><video src="/static/img/gifcache_gif3.mp4" autoplay loop poster="../static/img/gifcache_thumbnail3.png"></video></div>
     </div>
 
     <div class="home-demo">
@@ -63,7 +63,7 @@
         <div class="new-btn pulse">New!</div>
         <div class="feature-title">Chrome Extension</div>
         <div class="feature-slogan">Save gifs to your cache from anywhere on the internet</div>
-        <div id="gif4" class="feature-img"><img class="preload animate" src="#"><img src="/static/img/gifcache_thumbnail4.png"></div>
+        <div class="feature-img"><video src="/static/img/gifcache_gif4.mp4" autoplay loop poster="../static/img/gifcache_thumbnail4.png"></video></div>
         <a href="https://chrome.google.com/webstore/detail/gifcache-chrome-extension/hlhadacmblbgnlbccdlhmjoffbpjhjch" class="code-link-wrapper"><div class="code-link extension-btn animate">Add to Chrome!</div></a>
     </div>
 </div>
@@ -71,7 +71,7 @@
 <div class="home-section-grey features-section" style="padding: 0;">
     <div class="feature">
         <div class="feature-title">Built for <span class="pulse">Speed</span></div>
-        <div id="gif5" class="feature-img"><img class="preload animate" src="#"><img src="/static/img/gifcache_thumbnail5.png"></div>
+        <div class="feature-img animate"><video src="/static/img/gifcache_gif5.mp4" autoplay loop poster="../static/img/gifcache_thumbnail5.png"></video></div>
         <div class="feature-blurb">
             Compressed thumbnails are generated for each submitted gif and hosted on Amazon S3.  Full gifs are only
             downloaded when directly requested.
@@ -80,7 +80,7 @@
 
     <div class="feature" style="background-color: white;">
         <div class="feature-title">New Gifs <span class="pulse">Daily</span></div>
-        <div id="gif6" class="feature-img"><img class="preload animate" src="#"><img src="/static/img/gifcache_thumbnail6.png"></div>
+        <div class="feature-img animate"><video src="/static/img/gifcache_gif6.mp4" autoplay loop poster="../static/img/gifcache_thumbnail6.png"></video></div>
         <div class="feature-blurb">
             Use the included GifGrabber application to add gifs to your Cache directly from reddit.
         </div>
@@ -88,7 +88,7 @@
 
     <div class="feature">
         <div class="feature-title">Automatic <span class="pulse">Validation</span></div>
-        <div id="gif7" class="feature-img"><img class="preload animate" src="#"><img src="/static/img/gifcache_thumbnail7.png"></div>
+        <div class="feature-img animate"><video src="/static/img/gifcache_gif7.mp4" autoplay loop poster="../static/img/gifcache_thumbnail7.png"></video></div>
         <div class="feature-blurb">
             The validation service allows you to verify that your Cache URLs are valid and unique.
         </div>
