--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -61,7 +61,7 @@
 
     <div class="inner">
         <div class="new-btn pulse">New!</div>
-        <div class="feature-title">Chrome Extension</div>
+        <div class="feature-title"><span class="colorwave-extension">Chrome Extension</span></div>
         <div class="feature-slogan">Save gifs to your cache from anywhere on the internet</div>
         <div id="gif4" class="feature-img img-swap"><video src="/static/img/gifcache_gif4.mp4" autoplay loop poster="../static/img/gifcache_thumbnail4.png"></video></div>
         <a href="https://chrome.google.com/webstore/detail/gifcache-chrome-extension/hlhadacmblbgnlbccdlhmjoffbpjhjch" class="code-link-wrapper"><div class="code-link extension-btn animate">Add to Chrome!</div></a>
@@ -70,7 +70,7 @@
 
 <div class="home-section-grey features-section" style="padding: 0;">
     <div class="feature">
-        <div class="feature-title">Built for <span class="pulse">Speed</span></div>
+        <div id="feature-speed" class="feature-title">Built for <span class="colorwave-speed pulse">Speed</span></div>
         <div id="gif5" class="feature-img img-swap"><video src="/static/img/gifcache_gif5.mp4" autoplay loop poster="../static/img/gifcache_thumbnail5.png"></video></div>
         <div class="feature-blurb">
             Compressed thumbnails are generated for each submitted gif and hosted on Amazon S3.  Full gifs are only
@@ -79,7 +79,7 @@
     </div>
 
     <div class="feature" style="background-color: white;">
-        <div class="feature-title">New Gifs <span class="pulse">Daily</span></div>
+        <div id="feature-dailygifs" class="feature-title">New Gifs <span class="colorwave-dailygifs pulse">Daily</span></div>
         <div id="gif6" class="feature-img img-swap"><video src="/static/img/gifcache_gif6.mp4" autoplay loop poster="../static/img/gifcache_thumbnail6.png"></video></div>
         <div class="feature-blurb">
             Use the included GifGrabber application to add gifs to your Cache directly from reddit.
@@ -87,7 +87,7 @@
     </div>
 
     <div class="feature">
-        <div class="feature-title">Automatic <span class="pulse">Validation</span></div>
+        <div id="feature-validation" class="feature-title">Automatic <span class="colorwave-validation pulse">Validation</span></div>
         <div id="gif7" class="feature-img img-swap"><video src="/static/img/gifcache_gif7.mp4" autoplay loop poster="../static/img/gifcache_thumbnail7.png"></video></div>
         <div class="feature-blurb">
             The validation service allows you to verify that your Cache URLs are valid and unique.
