--- a/gifcache/templates/base.html
+++ b/gifcache/templates/base.html
@@ -115,7 +115,7 @@
     <script type="text/javascript" src="{% static '/static/js/jPages.min.js' %}"></script>
     <script type="text/javascript" src="{% static '/static/js/main.js' %}"></script>
     <script>
-        $(document).ready(function () {clickGifElements('{{ logged_in }}');});
+        $(document).ready(function () {clickGifElements('{{ can_edit }}');});
     </script>
     <!-- Google Analytics -->
     <script>
