--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -166,7 +166,7 @@
     </div>
     {% endif %}
     {% if message %}
-    <div class="message">{{ message }}</div>
+    <div class="message animate">{{ message }}</div>
     {% endif %}
     {% if gifs %}
     <!-- Beginning of GIF Grids -->
@@ -174,7 +174,7 @@
         <!-- Tagged GIFs Grid -->
         <div id="tagged-gif-grid" class="gif-grid">
             {% for entry in tagged_gifs %}
-            <div class="tag-group animate-opacity animate-bg">
+            <div class="tag-group tag-group-animate animate-opacity">
                 <a class="anchor" name="{{ entry.0 }}"></a>
                 <div class="tag-title animate-bg">{{ entry.0 }}</div>
                 <div class="gif-count animate-fast">{{ entry.2 }}</div>
@@ -307,8 +307,8 @@
         </div>
         <!--All GIFs Grid-->
         <div id="all-gif-grid" class="gif-grid">
-            <div class="tag-group animate-opacity animate-bg">
-                <div class="tag-title">all GIFs</div>
+            <div class="tag-group tag-group-animate animate-opacity animate-bg">
+                <div class="tag-title animate-bg">all GIFs</div>
                 <div class="gif-count animate-fast">{{ gif_number }}</div>
                 <i class="fa fa-cog tag-settings-icon animate-fast"></i>
                 <div class="tag-manager hidden">
@@ -409,9 +409,9 @@
     <div class="gifgrabber-form-wrapper hidden">
         <div class="gifgrabber-container main-form animate">
             <div class="grabber-lightbox hidden"></div>
-            <div class="gifgrabber-title"><div style="font-family: 'PT Sans';">GIF</div>Grabber</div>
+            <div class="gifgrabber-title"><div style="font-family: 'PT Sans';">GIF</div><span class="colorwave-gifgrabber">Grabber</span></div>
             <div class="gifgrabber-title-blurb">Grab GIFs directly from reddit</div>
-            <div id="grabber-error" class="message hidden"></div>
+            <div id="grabber-error" class="message hidden animate"></div>
 
             <form class="gifgrabber-form">
                 <input class="main-field subreddit-field animate" type="text" name="subreddit" maxlength="40" placeholder="/r/">
